==> rohitsardessai/stm32_bmp280/Drivers/bmp280/common/common.c <==
/**\
 * Copyright (c) 2023 Bosch Sensortec GmbH. All rights reserved.
 *
 * SPDX-License-Identifier: BSD-3-Clause
 **/

/******************************************************************************/
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>

#include "bmp2_defs.h"
#include "stm32f4xx_hal.h"

/******************************************************************************/
/*!                Static variable definition                                 */

/*! Variable that holds the I2C device address or SPI chip selection */
static uint8_t dev_addr;

/******************************************************************************/
/*!                User interface functions                                   */

/*!
 * I2C read function map to COINES platform
 */
BMP2_INTF_RET_TYPE bmp2_i2c_read(uint8_t reg_addr, uint8_t *reg_data, uint32_t length, const void *intf_ptr)
{
    I2C_HandleTypeDef *i2c_handle = (I2C_HandleTypeDef *)intf_ptr;

    return HAL_I2C_Mem_Read(i2c_handle, (uint16_t)dev_addr, (uint16_t)reg_addr, I2C_MEMADD_SIZE_8BIT, (uint8_t *)reg_data, length, HAL_MAX_DELAY);
}

/*!
 * I2C write function map to COINES platform
 */
BMP2_INTF_RET_TYPE bmp2_i2c_write(uint8_t reg_addr, const uint8_t *reg_data, uint32_t length, const void *intf_ptr)
{
    I2C_HandleTypeDef *i2c_handle = (I2C_HandleTypeDef *)intf_ptr;

    return HAL_I2C_Mem_Write(i2c_handle, (uint16_t)dev_addr, (uint16_t)reg_addr, I2C_MEMADD_SIZE_8BIT, (uint8_t *)reg_data, length, HAL_MAX_DELAY);
    // return coines_write_i2c(COINES_I2C_BUS_0, dev_addr, reg_addr, (uint8_t *)reg_data, (uint16_t)length);
}

/*!
 * SPI read function map to COINES platform
 */
BMP2_INTF_RET_TYPE bmp2_spi_read(uint8_t reg_addr, uint8_t *reg_data, uint32_t length, const void *intf_ptr)
{
    dev_addr = *(uint8_t *)intf_ptr;

    // return coines_read_spi(COINES_SPI_BUS_0, dev_addr, reg_addr, reg_data, (uint16_t)length);
    // TODO: implement
    return 0;
}

/*!
 * SPI write function map to COINES platform
 */
BMP2_INTF_RET_TYPE bmp2_spi_write(uint8_t reg_addr, const uint8_t *reg_data, uint32_t length, const void *intf_ptr)
{
    dev_addr = *(uint8_t *)intf_ptr;

    // return coines_write_spi(COINES_SPI_BUS_0, dev_addr, reg_addr, (uint8_t *)reg_data, (uint16_t)length);
    //  TODO: implement
    return 0;
}

/*!
 * Delay function map to COINES platform
 */
void bmp2_delay_us(uint32_t period, void *intf_ptr)
{
    (void)intf_ptr;
    // coines_delay_usec(period);
    HAL_Delay(period / 1000);
}

/*!
 *  @brief Prints the execution status of the APIs.
 */
void bmp2_error_codes_print_result(const char api_name[], int8_t rslt)
{
    if (rslt != BMP2_OK) {
        printf("%s\t", api_name);

        switch (rslt) {
        case BMP2_E_NULL_PTR:
            printf("Error [%d] : Null pointer error.", rslt);
            printf(
                "It occurs when the user tries to assign value (not address) to a pointer, which has been initialized to NULL.\r\n");
            break;
        case BMP2_E_COM_FAIL:
            printf("Error [%d] : Communication failure error.", rslt);
            printf(
                "It occurs due to read/write operation failure and also due to power failure during communication\r\n");
            break;
        case BMP2_E_INVALID_LEN:
            printf("Error [%d] : Invalid length error.", rslt);
            printf("Occurs when length of data to be written is zero\n");
            break;
        case BMP2_E_DEV_NOT_FOUND:
            printf("Error [%d] : Device not found error. It occurs when the device chip id is incorrectly read\r\n",
                   rslt);
            break;
        case BMP2_E_UNCOMP_TEMP_RANGE:
            printf("Error [%d] : Uncompensated temperature data not in valid range error.", rslt);
            break;
        case BMP2_E_UNCOMP_PRESS_RANGE:
            printf("Error [%d] : Uncompensated pressure data not in valid range error.", rslt);
            break;
        case BMP2_E_UNCOMP_TEMP_AND_PRESS_RANGE:
            printf(
                "Error [%d] : Uncompensated pressure data and uncompensated temperature data are not in valid range error.",
                rslt);
            break;
        default:
            printf("Error [%d] : Unknown error code\r\n", rslt);
            break;
        }
    }
}

/*!
 *  @brief Function to select the interface between SPI and I2C.
 */
int8_t bmp2_interface_selection(struct bmp2_dev *dev, uint8_t intf)
{
    int8_t rslt = BMP2_OK;
    // struct coines_board_info board_info;

    if (dev != NULL) {
        // int16_t result = coines_open_comm_intf(COINES_COMM_INTF_USB, NULL);

        // if (result < COINES_SUCCESS)
        // {
        //     printf(
        //         "\n Unable to connect with Application Board ! \n" " 1. Check if the board is connected and powered on. \n" " 2. Check if Application Board USB driver is installed. \n"
        //         " 3. Check if board is in use by another application. (Insufficient permissions to access USB) \n");
        //     exit(result);
        // }

        //(void)coines_get_board_info(&board_info);

        // #if defined(PC)
        //         setbuf(stdout, NULL);
        // #endif

        //(void)coines_set_shuttleboard_vdd_vddio_config(0, 0);
        HAL_Delay(100);

        /* Bus configuration : I2C */
        if (intf == BMP2_I2C_INTF) {
            printf("I2C Interface\n");

            dev_addr = (BMP2_I2C_ADDR_PRIM << 1); // left shift required for i2c on STM32
            dev->read = bmp2_i2c_read;
            dev->write = bmp2_i2c_write;
            dev->intf = BMP2_I2C_INTF;

            //(void)coines_config_i2c_bus(COINES_I2C_BUS_0, COINES_I2C_STANDARD_MODE);
        }
        /* Bus configuration : SPI */
        else if (intf == BMP2_SPI_INTF) {
            printf("SPI Interface\n");

            // dev_addr = COINES_SHUTTLE_PIN_7;
            dev->read = bmp2_spi_read;
            dev->write = bmp2_spi_write;
            dev->intf = BMP2_SPI_INTF;

            //(void)coines_config_spi_bus(COINES_SPI_BUS_0, COINES_SPI_SPEED_7_5_MHZ, COINES_SPI_MODE0);
        }

        /* Holds the I2C device addr or SPI chip selection */
        //dev->intf_ptr = &dev_addr;

        /* Configure delay in microseconds */
        dev->delay_us = bmp2_delay_us;

        HAL_Delay(100);

        // (void)coines_set_shuttleboard_vdd_vddio_config(3300, 3300);

        HAL_Delay(100);
    } else {
        rslt = BMP2_E_NULL_PTR;
    }

    return rslt;
}

// /*!
//  *  @brief Function deinitializes coines platform.
//  */
// void bmp2_coines_deinit(void)
// {
//     (void)fflush(stdout);

//     (void)coines_set_shuttleboard_vdd_vddio_config(0, 0);
//     coines_delay_msec(100);

//     /* Coines interface reset */
//     coines_soft_reset();
//     coines_delay_msec(100);

//     (void)coines_close_comm_intf(COINES_COMM_INTF_USB, NULL);
// }
